# Haskell-PetriNets

./: README.md
petrinet-algo/: petrinet-algo.cabal
petrinet-algo/src/: DFSM.hs
petrinet-algo/src/PetriNet/: Bisimilarity.hs  CTL.hs  Liveness.hs  StateSpace.hs
petrinet-algo/tests/: CtlTests.hs  LivenessTests.hs  Main.hs
petrinet-core/: petrinet-core.cabal
petrinet-core/src/PetriNet/: Net.hs  PTConstr.hs  PTNet.hs
petrinet-core/src/PetriNet/Util/: NodeMap.hs
petrinet-graph/: petrinet-graph.cabal
petrinet-graph/src/PetriNet/: Graphviz.hs
petrinet-posem/: LICENSE  petrinet-posem.cabal
petrinet-posem/src/PetriNet/: Unfoldings.hs
