name:                petrinet-core
version:             0.1.0
synopsis:            Petri net tools for Haskell - core library
-- description:         
license:             MIT
license-file:        LICENSE
author:              Daniil Frumin
maintainer:          difrumin@gmail.com
-- copyright:           
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     PetriNet.Net,
                       PetriNet.PTNet,
                       PetriNet.PTConstr,
                       PetriNet.Util.NodeMap
  build-depends:       base >=4.6 && <4.8,
                       mtl >=2.1 && <2.2,
                       fgl >=5.4 && <5.5,
                       containers >=0.5 && <0.6,
                       multiset >=0.2 && <0.3,
                       transformers >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
