name:                petrinet-posem
version:             0.1.0
synopsis:            Petri net tools for Haskell - partial-order semantics 
-- description:         
license:             MIT
license-file:        LICENSE
author:              Daniil Frumin
maintainer:          difrumin@gmail.com
-- copyright:           
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     PetriNet.Unfoldings
  build-depends:       base >=4.6 && <4.9,
                       petrinet-core >=0.1 && <0.4,
                       containers >=0.5 && <0.6,
                       multiset >=0.2 && <0.3,
                       mtl >=2.1 && <2.2
  hs-source-dirs:      src
  default-language:    Haskell2010
